modules/015-admission-policy-engine/charts/constraint-templates/templates/security/read-only-root-filesystem.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8readonlyrootfilesystem
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: security-policy
  annotations:
    metadata.gatekeeper.sh/title: "Read Only Root Filesystem"
    metadata.gatekeeper.sh/version: 1.1.0
    description: >-
      Requires the use of a read-only root file system by pod containers.
      Corresponds to the `readOnlyRootFilesystem` field in a
      PodSecurityPolicy. For more information, see
      https://kubernetes.io/docs/concepts/policy/pod-security-policy/#volumes-and-file-systems
spec:
  crd:
    spec:
      names:
        kind: D8ReadOnlyRootFilesystem
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          description: >-
            Requires the use of a read-only root file system by pod containers.
            Corresponds to the `readOnlyRootFilesystem` field in a
            PodSecurityPolicy. For more information, see
            https://kubernetes.io/docs/concepts/policy/pod-security-policy/#volumes-and-file-systems
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.check_bool" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.exception.spe" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.message" . | nindent 16 }}
            rego: |
              package d8.security_policies

              import data.lib.check_bool.check_container_bool
              import data.lib.common.input_containers
              import data.lib.common.object_labels
              import data.lib.common.object_namespace
              import data.lib.message.violation_message

              violation contains {"msg": msg, "details": {}} if {
                not input.review.operation == "DELETE"
                c := input_containers[_]
                result := check_container_bool(
                  c,
                  ["securityContext", "readOnlyRootFilesystem"],
                  "readOnlyRootFilesystem",
                  true,
                  false,
                  ["spec", "securityContext", "readOnlyRootFilesystem", "allowedValue"],
                  object_labels,
                  object_namespace
                )
                not result.allowed
                msg := violation_message("only read-only root filesystem container is allowed", sprintf("container: %v", [c.name]), result.detail)
              }
