modules/015-admission-policy-engine/charts/constraint-templates/tests/common/test_samples/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testns
  labels:
    security.deckhouse.io/pod-policy: restricted
    enforce: deny-all
