modules/015-admission-policy-engine/charts/constraint-templates/tests/read-only-root-filesystem/test_samples/constraint_templates/security_policy/002-allowed-deployment-readOnlyRootFilesystem-true-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed-deployment-readOnlyRootFilesystem-true-container
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          securityContext:
            readOnlyRootFilesystem: true
