modules/015-admission-policy-engine/charts/constraint-templates/tests/read-only-root-filesystem/test_samples/constraint_templates/security_policy/004-allowed-multiple-containers-both-readonly.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-multiple-containers-both-readonly
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        readOnlyRootFilesystem: true
    - name: redis
      image: redis
      securityContext:
        readOnlyRootFilesystem: true
