modules/015-admission-policy-engine/charts/constraint-templates/tests/read-only-root-filesystem/test_samples/constraint_templates/security_policy/005-allowed-readOnlyRootFilesystem-true-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-readOnlyRootFilesystem-true-container
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        readOnlyRootFilesystem: true
