modules/015-admission-policy-engine/charts/constraint-templates/tests/read-only-root-filesystem/test_samples/constraint_templates/security_policy/008-disallowed-init-container-not-readonly.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-init-container-not-readonly
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        readOnlyRootFilesystem: true
  initContainers:
    - name: init
      image: busybox
      securityContext:
        readOnlyRootFilesystem: false
